# fastapi-keycloack

./: .env.docker  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  readme.md
docker/: init.sql
envs/: test.env
src/: api_gateway.py  main.py
src/core/: settings.py
src/core/config/: settings.py
src/core/repository/: async_posgtres_repository.py  postgres_repository.py  session.py  sync_postgres_repository.py
src/core/repository/postgres/: async_repository.py  base_model.py  repository.py  session.py
src/core/router/: api_gateway.py
src/core/service/: async_unit_of_work.py  unit_of_work.py
src/domain/hello/: models.py  repository.py  router.py  unit_of_work.py
src/domain/system_setting/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  unit_of_work.py
src/hello/: models.py  schemas.py
