[project]
name = "keycloak-poc"
version = "0.1.0"
description = "Personal learning project for FastAPI, SQLModel, Repository Pattern, and Unit of Work"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlmodel>=0.0.31",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
# Python 버전
target-version = "py313"

# 라인 길이
line-length = 100

# src 폴더를 소스 루트로 인식
src = ["src"]

# 제외할 디렉토리
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# 활성화할 규칙들
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

# 무시할 규칙들
ignore = [
    "E501",   # line too long (ruff formatter가 처리)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "UP007",  # Use X | Y for type annotations (Optional 허용)
]

# 파일별 무시 규칙
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["core", "domain"]

[tool.ruff.format]
# 작은따옴표 사용 (Black 기본값)
quote-style = "double"

# 들여쓰기 스타일
indent-style = "space"

# 매직 trailing comma
skip-magic-trailing-comma = false
